namespace PoolTypes {
	[System.Serializable] public enum EnemyType {
		Zglorg_Jeune,
		Zglorg_Adulte,
        Zglorg_Conquérant,
	}
    [System.Serializable] public enum ObjectType {
		AutoAttack_Ice,
		AutoAttack_Fire,
		AutoAttack_Arcane,
        IceNoca,
        IceBuff,
        FireBalls,
        FireTrail,
        ArcaneProjectile1,
        ArcaneProjectile2,
        ArcaneProjectile3,
        ArcaneExplosion,
	}
}
